--- a/.github/workflows/release_mod.yml
+++ b/.github/workflows/release_mod.yml
@@ -39,35 +39,36 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Set Environment Variables
+      - name: Generate Variables
+        id: variables
         shell: bash
         run: |
-          echo "mod_path=./${{ inputs.mod_name }}" >> $GITHUB_ENV
-          echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-          echo "no_prefix_version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+          echo "mod_path=./${{ inputs.mod_name }}" >> $GITHUB_OUTPUT
+          echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
+          echo "no_prefix_version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
       - name: Create Mod Folder
         shell: bash
-        run: mkdir -p ${{ env.mod_path }}
+        run: mkdir -p ${{ steps.variables.outputs.mod_path }}
 
       - name: Download Mod Artifacts from Build Step
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.artifact_name }}
-          path: ${{ env.mod_path }}
+          path: ${{ steps.variables.outputs.mod_path }}
 
       # We do this step to avoid a "zip bomb" as the zip from the build step
       # has the mod files at the root level, which is not what users generally want.
       - name: Zip Mod
         shell: bash
-        run: zip -r ${{ env.mod_path }}.zip ${{ env.mod_path }}/*
+        run: zip -r ${{ steps.variables.outputs.mod_path }}.zip ${{ steps.variables.outputs.mod_path }}/*
 
       - name: Get Changelog Entry
         id: changelog_reader
         uses: mindsers/changelog-reader-action@v2
         with:
-          version: ${{ env.no_prefix_version }}
-          path: ${{ env.mod_path }}/CHANGELOG.md
+          version: ${{ steps.variables.outputs.no_prefix_version }}
+          path: ${{ steps.variables.outputs.mod_path }}/CHANGELOG.md
 
       - name: Converts Markdown to Steam markup
         id: markdown_steam
@@ -83,8 +84,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.version }}
-          release_name: Release ${{ env.version }}
+          tag_name: ${{ steps.variables.outputs.version }}
+          release_name: Release ${{ steps.variables.outputs.version }}
           body: ${{ steps.changelog_reader.outputs.changes }}
           draft: false
           prerelease: false
@@ -96,15 +97,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.mod_path }}.zip
-          asset_name: ${{ inputs.mod_name }}-${{ env.version }}.zip
+          asset_path: ${{ steps.variables.outputs.mod_path }}.zip
+          asset_name: ${{ inputs.mod_name }}-${{ steps.variables.outputs.version }}.zip
           asset_content_type: application/zip
 
       - name: Get Mod Item ID
         if: ${{ inputs.upload_to_steam }}
         id: mod_item_id
         run: |
-          itemid=$(<"${{ env.mod_path }}/About/PublishedFileId.txt")
+          itemid=$(<"${{ steps.variables.outputs.mod_path }}/About/PublishedFileId.txt")
           echo "itemid=$itemid" >> "$GITHUB_OUTPUT"
 
       - name: Upload to Steam Workshop
@@ -113,7 +114,7 @@ jobs:
         with:
           appid: 294100 # RimWorld
           itemid: ${{ steps.mod_item_id.outputs.itemid }}
-          path: ${{ env.mod_path }}
+          path: ${{ steps.variables.outputs.mod_path }}
           changenote: ${{ steps.markdown_steam.outputs.steam-markup }}
         env:
           STEAM_USERNAME: ${{ secrets.STEAM_USERNAME }}
