--- a/.github/workflows/build_mod.yml
+++ b/.github/workflows/build_mod.yml
@@ -53,6 +53,16 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Checkout rimworld-utils Repository
+        uses: actions/checkout@v4
+        with:
+          repository: "ilyvion/rimworld-utils"
+          path: "rimworld-utils"
+
+      - name: Move to parent, where it's expected
+        shell: bash
+        run: mv rimworld-utils ..
+
       - name: Post-Checkout Repository Hook
         uses: ./.github/build_hooks/post_checkout_hook
         if: ${{ hashFiles('./.github/build_hooks/post_checkout_hook/action.yml') != '' }}
