--- a/.github/workflows/release_mod.yml
+++ b/.github/workflows/release_mod.yml
@@ -75,7 +75,13 @@ jobs:
         uses: ilyvion/steamdown@main
         with:
           markdown: ${{ steps.changelog_reader.outputs.changes }}
-          escape-quotes: true
+
+      - name: Fail if Steam markup contains a double quote
+        run: |
+          if [[ "${{ steps.markdown_steam.outputs.steam-markup }}" == *\"* ]]; then
+            echo "Changelog contains a double quote, which would cause the Steam upload to fail."
+            exit 1
+          fi
 
       - name: Create Release
         if: ${{ inputs.create_release }}
