--- a/Common.props
+++ b/Common.props
@@ -52,16 +52,26 @@
                 <DefineConstants>$(DefineConstants);v1_6</DefineConstants>
             </PropertyGroup>
             <ItemGroup>
-                <PackageReference Include="Krafs.Rimworld.Ref" Version="1.6.*">
+                <PackageReference Include="Lib.Harmony" Version="2.3.6">
                     <ExcludeAssets>runtime</ExcludeAssets>
                 </PackageReference>
-                <PackageReference Include="Lib.Harmony" Version="2.3.6">
+            </ItemGroup>
+        </When>
+        <When Condition="'$(RimWorldVersion)' == '1.5'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_5</DefineConstants>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="[2.3.3]">
                     <ExcludeAssets>runtime</ExcludeAssets>
                 </PackageReference>
             </ItemGroup>
         </When>
     </Choose>
     <ItemGroup>
+        <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*">
+            <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
         <PackageReference Include="Krafs.Publicizer" Version="2.2.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
