--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,21 @@
+# top-most EditorConfig file
+root = true
+
+# Unix-style newlines with a newline ending every file
+[*]
+end_of_line = lf
+charset = utf-8
+insert_final_newline = true
+trim_trailing_whitespace = true
+dotnet_sort_system_directives_first = true
+dotnet_separate_import_directive_groups = true
+
+# 4 space indentation
+[*.{cs,xml,yml,md,props,targets,csproj}]
+indent_style = space
+indent_size = 4
+max_line_length = 100
+
 [*.cs]
 
 ## ----- Code Style Rules ----- ##
@@ -147,6 +165,9 @@ dotnet_diagnostic.IDE0053.severity = warning
 dotnet_diagnostic.IDE0054.severity = warning
 # Use coalesce compound assignment
 dotnet_diagnostic.IDE0074.severity = warning
+
+# Fix formatting (disabled now that we use a custom formatter, csharpier)
+dotnet_diagnostic.IDE0055.severity = none
 
 # Use index operator
 dotnet_diagnostic.IDE0056.severity = warning
@@ -1090,3 +1111,14 @@ csharp_preserve_single_line_blocks = false
 
 [**/HarmonyPatches/*.cs]
 dotnet_diagnostic.IDE0051.severity = none
+
+[{*Def,*DefOf,CompProperties_*}.cs]
+dotnet_diagnostic.CA1051.severity = suggestion
+
+[*DefOf.cs]
+dotnet_diagnostic.CS1591.severity = suggestion
+dotnet_diagnostic.CS0649.severity = suggestion
+dotnet_diagnostic.CS8618.severity = suggestion
+
+[*AssemblyInfo.cs]
+dotnet_diagnostic.CS0436.severity = none
