--- a/.editorconfig
+++ b/.editorconfig
@@ -1120,5 +1120,9 @@ dotnet_diagnostic.CS1591.severity = suggestion
 dotnet_diagnostic.CS0649.severity = suggestion
 dotnet_diagnostic.CS8618.severity = suggestion
 
+[CompProperties_*.cs]
+dotnet_diagnostic.CS0649.severity = suggestion
+dotnet_diagnostic.CS8618.severity = suggestion
+
 [*AssemblyInfo.cs]
 dotnet_diagnostic.CS0436.severity = none
