--- a/Common.props
+++ b/Common.props
@@ -67,6 +67,16 @@
                 </PackageReference>
             </ItemGroup>
         </When>
+        <When Condition="'$(RimWorldVersion)' == '1.4'">
+            <PropertyGroup>
+                <DefineConstants>$(DefineConstants);v1_4</DefineConstants>
+            </PropertyGroup>
+            <ItemGroup>
+                <PackageReference Include="Lib.Harmony" Version="[2.2.2]">
+                    <ExcludeAssets>runtime</ExcludeAssets>
+                </PackageReference>
+            </ItemGroup>
+        </When>
     </Choose>
     <ItemGroup>
         <PackageReference Include="Krafs.Rimworld.Ref" Version="$(RimWorldVersion).*">
