--- a/.editorconfig
+++ b/.editorconfig
@@ -1119,6 +1119,7 @@ dotnet_diagnostic.CA1051.severity = suggestion
 dotnet_diagnostic.CS1591.severity = suggestion
 dotnet_diagnostic.CS0649.severity = suggestion
 dotnet_diagnostic.CS8618.severity = suggestion
+dotnet_diagnostic.CA2211.severity = suggestion
 
 [CompProperties_*.cs]
 dotnet_diagnostic.CS0649.severity = suggestion
